@@ -8,8 +8,8 @@ WriteMakefile(
     'PREREQ_PM'		=> { 
  				Image::Info  => 0,
 				Image::Size => 0,
+				Image::Imlib2 => 0.12,
 				CGI::FastTemplate => 0, 
-				Inline => 0, 
 				mod_perl => 0,
 				URI => 1.23,
 				CGI => 2.93,
