@@ -23,6 +23,7 @@ Revision history for Perl extension Apache::Gallery.
 	- Support for the FNumber EXIF value (Thomas Corell)
 	- Added GalleryRootText option to allow changing the name of
 	  the root element in the menu (Christopher Knight)
+	- Use Image::Imlib2 instead of Inline::C (Andreas Plenser Jacobsen)
 
 0.6 Tue Apr 22 10:24:40 CEST 2003
 
